<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ColorButtonBackground"
    android:padding="16dp">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:onClick="onBackPressed"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/btn_volver"/>
        <ImageView
            android:id="@+id/center_icon"
            android:layout_width="68dp"
            android:layout_height="67dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logotipo_mesa_de_trabajo_1"
            android:contentDescription="@string/logo"/>
        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:onClick="logout"
            android:src="@drawable/baseline_logout_24"
            android:contentDescription="@string/btn_desloguear"/>
</RelativeLayout>